kubernetes/catalogo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-catalogo
  namespace: microservicios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-catalogo
  template:
    metadata:
      labels:
        app: ms-catalogo
    spec:
      containers:
        - name: ms-catalogo
          image: ms-catalogo:latest
          imagePullPolicy: Never
