kubernetes/notificaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-notificaciones
  namespace: microservicios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-notificaciones
  template:
    metadata:
      labels:
        app: ms-notificaciones
    spec:
      containers:
        - name: ms-notificaciones
          image: ms-notificaciones:latest
          imagePullPolicy: Never
