kubernetes/publicaciones.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mis-publicaciones
  namespace: microservicios
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mis-publicaciones
  template:
    metadata:
      labels:
        app: mis-publicaciones
    spec:
      containers:
        - name: mis-publicaciones
          image: mis-publicaciones:latest
          imagePullPolicy: Never
