kubernetes/eureka.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  namespace: microservicios
spec:
  ports:
  - port: 8761
    targetPort: 8761
  selector:
    app: eureka-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
      - name: eureka-server
        image: ms-eureka-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8761
