kubernetes/gateway.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: microservicios
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30081
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ms-api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
