kubernetes/sincronizacion.yml
apiVersion: v1
kind: Service
metadata:
  name: sincronizacion-service
  namespace: microservicios
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sincronizacion
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sincronizacion
  namespace: microservicios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sincronizacion
  template:
    metadata:
      labels:
        app: sincronizacion
    spec:
      containers:
        - name: sincronizacion
          image: sincronizacion:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
