kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicios-ingress
  namespace: microservicios
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: app-publicaciones.local
      http:
        paths:
          # Ruta principal al Gateway
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8000

          # Rutas específicas para debugging
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
